2004-05-14  Simone Gotti  <simone.gotti@email.it>
	* Now kppp has the multiple modem profile features, so it finally 
	can manage a lot of modems and not only one! 
	It can use the old kppp config copying the [Modem] group to the 
	[Modem0] group if it doesn't already exists.
	See Bugs: #52028 

2004-04-24  Harri Porten  <porten@kde.org>

	* connect.cpp: added patch by Dmitri that allows automatic redials
	on NO CARRIER.

	* provide automatic CBCP (Windows) callback support. Patch by Nick
	Shafff.

2004-04-12  Gerardo Puga  <gpuga@gioia.ing.unlp.edu.ar>

	* Now kppp will notify other applications using DCOP about 
	  connection status changes.

2004-01-07  Harri Porten  <porten@kde.org>

	* modem.cpp: fix a bug in writing of modem commands. EAGAIN errors
	were not handled. Thanks to Matteo Croce who helped tracking this
	down.
	
2003-12-13  Harri Porten  <porten@kde.org>

	* edit.cpp: disallow colons in connection name. breaks the loginfo
	format

2003-07-16  Harri Porten  <porten@froglogic.com>

	* connect.cpp: Digital Line Protection (DLP) support contributed
	by Dorian Araneda <dorian.araneda at intel.com>

2003-02-18  Harri Porten  <porten@kde.org>

	* added keyboard accelerators, layout fix (patch from
	Mikolaj Machowski)

2002-12-22  Harri Porten  <porten@kde.org>

	* acctselect.cpp: allow %xx escapes in ruleset file names.

2002-10-27  Harri Porten  <porten@trolltech.com>

	* kpppconfig.h: increased MAX_ACCOUNTS to 100
	* connect.cpp: fix for race condition in Expect command by
	Dag Nygren dag at newtech.fi

2002-04-12  Nadeem Hasan  <nhasan@kde.org>
    * Lots of GUI and layout cleanups. Added accels.

2002-01-27  Per Winkvist  <nd96pwt@student.hig.se>

	* Add option to tune ATS11 "tone duration".

2002-01-22  Per Winkvist  <nd96pwt@student.hig.se>

	* Make "Connect To" button default.
	* Move KPPPWidget in main.cpp to an own file which reduced
        the size of main.cpp with almost 1000 lines.

2002-01-21 Chris Howells <howells@kde.org>