@@ -167,8 +167,11 @@ bool Modem::opentty() {
   tty.c_lflag &= ~(ECHO|ECHOE|ECHOK|ECHOKE);
 
 
-  if(gpppdata.flowcontrol() != "None") {
-    if(gpppdata.flowcontrol() == "CRTSCTS") {
+  // the english/i18n mix below is ugly but we want to keep working
+  // after someone changed the code to use i18n'ed config values
+  QString flowCtrl = gpppdata.flowcontrol();
+  if(flowCtrl != "None" && flowCtrl != i18n("None")) {
+    if(flowCtrl == "CRTSCTS" || flowCtrl == i18n("Hardware [CRTSCTS]")) {
       tty.c_cflag |= CRTSCTS;
     }
     else {
