@@ -1,3 +1,8 @@
+2004-05-19  Harri Porten  <porten@kde.org>
+
+	* modem.cpp: fixed flow control for non-English users. Bug found by
+	Elias Jahn (#73646).
+
 2004-05-14  Simone Gotti  <simone.gotti@email.it>
 	* Now kppp has the multiple modem profile features, so it finally 
 	can manage a lot of modems and not only one! 
